updated auto complete for state model

--- a/src/app/home/schema-builder/schema-builder.component.scss
+++ b/src/app/home/schema-builder/schema-builder.component.scss
@@ -46,6 +46,10 @@
   #experience-side-nav{
     width: 175px;
     border-right: 1px solid #DBDBDB;
+
+    .side-nav-tab{
+      cursor: pointer;
+    }
   }
 }
 
@@ -60,6 +64,13 @@
   overflow-x: hidden;
   min-height: calc(100vh - 264px);
   max-height: calc(100vh - 264px);
+}
+
+.scrollStateModel{
+  overflow-y: auto;
+  overflow-x: hidden;
+  min-height: calc(100vh - 224px);
+  max-height: calc(100vh - 224px);
 }
 
 .builder-body {
