--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -139,30 +139,29 @@
           <div class="w-100 builder d-flex bg-light">
             <div class='d-flex flex-column p-3' id='experience-side-nav'>
               <div class='mb-3'>
-                <span class='text-accent text-bold'>
+                <span class='side-nav-tab' [ngClass]="{'text-accent' : experienceSideNavActiveTab == 0 , 'text-bold' : experienceSideNavActiveTab == 0}"  (click)='experienceSideNavActiveTab = 0'>
                   State Model
                 </span>
               </div>
-              <div class='mb-3'>
-                <span>
+              <div class='mb-3' *ngIf='false'>
+                <span class='side-nav-tab'>
                   Data Segmentation
                 </span>
               </div>
               <div class='mb-3'>
-                <span>
+                <span class='side-nav-tab' [ngClass]="{'text-accent' : experienceSideNavActiveTab == 2 , 'text-bold' : experienceSideNavActiveTab == 2}"  (click)='experienceSideNavActiveTab = 2'>
                   Personalize
                 </span>
               </div>
             </div>
             <div class='d-flex flex-column w-100'>
-              <div *ngIf="experienceSideNavActiveTab == 1" class="schema-creator scroll position-relative w-100" id="schema-creator" [scrollTop]="schemaFieldheight">
+              <div *ngIf="experienceSideNavActiveTab == 2" class="schema-creator scroll position-relative w-100" id="schema-creator" [scrollTop]="schemaFieldheight">
                 <div class="builder-body border-left">
                   <odp-wizards [form]="form" [edit]="edit"></odp-wizards>
                 </div>
               </div>
 
-              <div *ngIf="experienceSideNavActiveTab == 0"  class="schema-creator scroll position-relative w-100">
-                
+              <div *ngIf="experienceSideNavActiveTab == 0"  class="schema-creator scrollStateModel position-relative w-100">
                 <odp-state-model [(form)]='form' [edit]='edit'></odp-state-model>
               </div>
             </div>
