--- a/src/app/home/schema-utils/state-model/state-model.component.html
+++ b/src/app/home/schema-utils/state-model/state-model.component.html
@@ -11,15 +11,20 @@
     <section *ngIf="!stateModelEnabled" [formGroup]="form">
         <div class='d-flex justify-content-start'>
             <div id='select-state-model' formGroupName="stateModel" odpClickOutside (outside)='searchTerm = "" '>
-                <input type="text" class="form-control" placeholder="Choose existing attribute or create one..." odpAutoFocus
+                <input  [attr.disabled]="!edit.status ? true : null" type="text" class="form-control" placeholder="Choose existing attribute or create one..." odpAutoFocus
                 formControlName="attribute" (odpSearchTerm)="searchTerm = $event" >
             </div>
     
-            <button type='button' id='configureStateModel' (click)='enableStateModel()'>
+            <button [disabled]='!edit.status' type='button' id='configureStateModel' (click)='enableStateModel()'>
                 Configure State Model
             </button>
         </div>
-     
+
+        <div id='stateModelInfo' *ngIf="!searchTerm">
+            <span>
+                *Attributes with List of Values only
+            </span>
+        </div>
     
         <div class="selector-dropdown d-flex flex-column border rounded bg-white"
             *ngIf="searchTerm">
@@ -32,13 +37,17 @@
     
                 <div class="selector-list-item d-flex align-items-center p-2 hover"
                 *ngIf="(ListOfValuesAttributes| filterDefinition:searchTerm).length == 0" (click)="addNewListOfValues('String')">
+                    <span>Add &nbsp;</span>
+                    <span class="mr-2 font-weight-bold">{{searchTerm}}</span>
                     <odp-field-type [field]="{type:'String',properties:{}}"></odp-field-type>
-                    <span class="ml-2">{{searchTerm}}</span>
+
                 </div>
                 <div class="selector-list-item d-flex align-items-center p-2 hover"
                 *ngIf="(ListOfValuesAttributes| filterDefinition:searchTerm).length == 0" (click)="addNewListOfValues('Number')">
+                    <span>Add &nbsp;</span>
+                    <span class="mr-2 font-weight-bold">{{searchTerm}}</span>
                     <odp-field-type [field]="{type:'Number',properties:{}}"></odp-field-type>
-                    <span class="ml-2">{{searchTerm}}</span>
+
                 </div>
     
             </div>
@@ -58,31 +67,44 @@
     </section>
 
     <section *ngIf="stateModelEnabled">
-
-        <div class="d-flex justify-content-between">
-            <div>
-                {{stateModelAttribute}}
+        <div class="d-flex justify-content-between" >
+            <div id='select-state-model' >
+                <input  [attr.disabled]="true" type="text" class="form-control" [value]='stateModelAttribute'>
             </div>
-            <div>
-                <span (click)="disableStateModel()" id='deleteStateModel'>
+            <div *ngIf="edit.status" class='mt-2'>
+                <span (click)="disableStateModel()" id='delete-state-model'>
                     Delete State Model 
                 </span>
             </div>
         </div>
        
-        <div class='mt-3 p-3 bg-white'>
+        <div class='mt-3 p-3 bg-white' cdkScrollable>
         
-            <div class ='new-state-section d-flex justify-content-start'>
+            <div *ngIf="edit.status" class ='new-state-section d-flex justify-content-start'>
                 <div class='w-50'>
-                    <input #newStateBox type="text" class="form-control" placeholder="Add State Value here" >
+                    <input #newStateBox type="text" class="form-control" id='new-state-input'
+                    placeholder="Add State Value here" (keyup.enter)='addNewState(newStateBox.value); newStateBox.value=null;'>
                 </div>
         
-                <div id='add-state' (click)='addNewState(newStateBox.value); newStateBox.value=null;'>
+                <div id='add-state'  (click)='addNewState(newStateBox.value); newStateBox.value=null;'>
                     <span class="fa fa-plus"></span>
                 </div>
             </div>
-        
 
+            <div class='row' *ngIf="edit.status">
+               
+                    <div class="col-6">
+                        <span *ngIf="deleteStateCount>0" (click)='deleteStates()'>
+                            Delete {{deleteStateCount}} States
+                        </span>
+                    </div>
+                    <div class="col-6 text-right">
+                        <span (click)='deleteAllNextStates()'>
+                            Clear All Next States
+                        </span>
+                    </div>
+            </div>
+        
             <div class='mt-3'>
                 <div class='row mb-3'>
                     <div class='col-3'>
@@ -93,37 +115,43 @@
                     </div>
                 </div>
 
-                <div class='state-model-config'>
-                    <div class='row mb-3' *ngFor='let state of allStates'>
+                <div class='state-model-config' [sortablejs]="stateModelData"
+                [sortablejsOptions]="{sort: !!edit && !!edit.status, filter: '.disabled', onMove: sortableOnMove, onUpdate: sortableOnUpdate }">
+                    <div class='row mb-3 align-items-center' *ngFor='let stateData of stateModelData; let i = index '>
                         <div class='col-3'>
-                            <span>{{state}}</span>
+                            <span *ngIf="edit.status" class="fa fa-bars text-muted hover mr-2"></span>
+                            <input *ngIf="edit.status" type="checkbox"  [(ngModel)]='stateData.checked'>
+                            <span class='state-name'>{{stateData.state}}</span>
+                            <span *ngIf="edit.status" class='fa fa-times float-right' (click)='deleteStates(stateData.state)'>
+                            </span>
                         </div>
                         <div class='col-9'>
-                            
                             <mat-form-field class="example-chip-list w-100" appearance="fill">
-                                <mat-chip-list #chipList aria-label="Next State selection">
-                                  <mat-chip *ngFor="let nextState of nextStates(state)" [selectable]="selectable"
-                                           [removable]="removable" (removed)="remove(nextState, state)">
+                                <mat-chip-list #chipList aria-label="Next State selection" [disabled]='!edit.status'>
+                                  <mat-chip *ngFor="let nextState of nextStates(stateData.state)" [selectable]="selectable"
+                                           [removable]="removable" (removed)="removeNextState(nextState, stateData.state)">
                                         {{nextState}}
                                     <mat-icon matChipRemove *ngIf="removable">
                                         <span class='fa fa-times'></span>
                                     </mat-icon>
                                   </mat-chip>
-                                  <input placeholder="Next State..."
+                                  <input placeholder="{{ edit.status ? 'Next State...': '' }}"
                                          #chipInput
+                                         [formControl]="stateCtrl"
                                          [matChipInputFor]="chipList"
+                                         [matAutocomplete]="auto"
                                          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                                          [matChipInputAddOnBlur]="addOnBlur"
-                                         (matChipInputTokenEnd)="addNew($event, state , chipInput)">
+                                         (matChipInputTokenEnd)="addNewNextState($event, stateData.state , chipInput, auto)">
                                 </mat-chip-list>
 
-                                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="add($event, state , chipInput)">
-                                    <mat-option *ngFor="let tag of allStates" [value]="state">
-                                      <span>{{ state }}</span>
+                                <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedNextState($event, chipInput, i)">
+                                    <mat-option *ngFor="let nextState of autoCompleteNextStates(stateData.state) | filterNextState: chipInput.value" [value]="nextState">
+                                      {{nextState}}
                                     </mat-option>
                                 </mat-autocomplete>
 
-                              </mat-form-field>
+                            </mat-form-field>
                         </div>
                     </div>
                 
@@ -134,71 +162,24 @@
 
     </section>
 
-
-    <!-- <div class='mt-3 p-3 bg-white'>
-
-        <div class='w-50'>
-            <input type="text" class="form-control" placeholder="Add State Value here">
-        </div>
-
-        <div class='mt-3'>
-            <div class='row mb-3'>
-                <div class='col-3'>
-                    <span class='state-model-label font-weight-bold'>State</span>
-                </div>
-                <div class='col-9'>
-                    <span class='state-model-label font-weight-bold'>Add Next State</span>
-                </div>
-            </div>
-
-            <div class='state-model-config'>
-                <div class='row mb-3'>
-                    <div class='col-3'>
-                        <span>Open</span>
-                    </div>
-                    <div class='col-9'>
-                        <mat-form-field class="example-chip-list w-100" appearance="fill">
-                            <mat-label>Favorite Fruits</mat-label>
-                            <mat-chip-list #chipList aria-label="Fruit selection">
-                              <mat-chip
-                                *ngFor="let fruit of fruits"
-                                [selectable]="selectable"
-                                [removable]="removable"
-                                (removed)="remove(fruit)">
-                                {{fruit}}
-                                <mat-icon matChipRemove *ngIf="removable">x</mat-icon>
-                              </mat-chip>
-                              <input
-                                placeholder="New fruit..."
-                                #fruitInput
-                                [formControl]="fruitCtrl"
-                                [matAutocomplete]="auto"
-                                [matChipInputFor]="chipList"
-                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                (matChipInputTokenEnd)="add($event)">
-                            </mat-chip-list>
-                            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-                              <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
-                                {{fruit}}
-                              </mat-option>
-                            </mat-autocomplete>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class='row'>
-                    <div class='col-3'>
-                        <span>Close</span>
-                    </div>
-                    <div class='col-9'>
-                        <span>Close</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div> -->
-
-
-
-
 </div>
+
+<ng-template #deleteModalTemplate>
+    <div class="modal-body p-4">
+      <div class="d-flex align-items-center justify-content-between w-100">
+        <div class="d-flex align-items-center">
+          <span class="icon-wrapper delete rounded-circle d-flex align-items-center justify-content-center mr-2">
+            <odp-service-icon [size]="18" color="DD5151" class="mt-1"></odp-service-icon>
+          </span>
+          <span class="font-weight-bold mb-1">{{deleteModal.title}}</span>
+        </div>
+        <span class="fa fa-times text-secondary hover " (click)="deleteModalTemplateRef.close(false)"></span>
+      </div>
+      <p class="text-secondary text-center my-5">{{deleteModal.message}}</p>
+      <div class="d-flex align-items-center justify-content-end">
+        <button type="button" class="btn btn-min-width btn-delete" (click)="deleteModalTemplateRef.close(true)"
+          id="sbDeleteModalYes">Yes</button>
+      </div>
+    </div>
+  </ng-template>
+  
