--- a/src/app/home/schema-utils/state-model/state-model.component.scss
+++ b/src/app/home/schema-utils/state-model/state-model.component.scss
@@ -27,26 +27,30 @@
   outline: none;
 }
 
-.selector-dropdown {
-    min-width: 30%;
-    max-width: 30%;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24);
-    top: 30px;
-    left: 0px;
-    margin-bottom: 30px;
-    z-index: 10;
-    .selector-list {
-      max-height: 144px;
-      overflow-y: auto;
-      .selector-list-item {
-        min-height: 36px;
-        max-height: 36px;
-        &:hover {
-          background: $light;
+.create-state-model{
+    .selector-dropdown {
+      min-width: 30%;
+      max-width: 30%;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24);
+      top: 30px;
+      left: 0px;
+      margin-bottom: 30px;
+      z-index: 10;
+      .selector-list {
+        max-height: 144px;
+        overflow-y: auto;
+        .selector-list-item {
+          min-height: 36px;
+          max-height: 36px;
+          &:hover {
+            background: $light;
+          }
         }
       }
-    }
+  }
 }
+
+
 
 #select-state-model{
   width: 30%;
