--- a/src/app/utils/structure-field/structure-field.component.scss
+++ b/src/app/utils/structure-field/structure-field.component.scss
@@ -82,3 +82,9 @@
   background-color: #ececec;
 }
 
+.state-model{
+    background: #C4C4C4;
+    border-radius: 4px;
+    padding: 2px 5px;
+    margin-left: 12px;
+}
