--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-library/group-author-library.component.scss
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-library/group-author-library.component.scss
@@ -1,74 +1,97 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
-.service-name{
-    min-width: 170px;
-    max-width: 170px;
-}
-.search-exception{
-    min-width: 300px;
-    max-width: 300px;
-}
-.permission-div{
-    min-width: 120px;
-    max-width: 120px;
-    min-height: 64px;
-    max-height: 64px;
-    .permission-card{
-        min-width: 96px;
-        max-width: 96px;
-        min-height: 96px;
-        max-height: 96px;
-        transition: 0.25s;
-        &:hover{
-            background: $light;
-        }
-        .permission-icon-wrapper{
-            min-width: 46px;
-            max-width: 46px;
-            min-height: 46px;
-            max-height: 46px;
-            border: 3px solid $light;
-            .permission-icon{
-                min-width: 40px;
-                max-width: 40px;
-                min-height: 40px;
-                max-height: 40px;
-            }
-        }
+.top-bar {
+  min-height: 40px;
+  max-height: 40px;
+  border-radius: 20px;
+  .help {
+    cursor: pointer;
+    min-width: 56px;
+    max-width: 56px;
+    min-height: 20px;
+    max-height: 20px;
+    border-radius: 10px;
+    margin-left: 8px;
+    margin-right: 8px;
+    background: #01a7c2;
+    color: $white;
+    font-size: 12px;
+    .text {
+      font-size: 11px;
+      letter-spacing: 0.25px;
     }
-    .permission-selector{
-        .permission-selected{
-            min-width: 80px;
-            max-width: 80px;
-            min-height: 20px;
-            max-height: 20px;
-            border-radius: 10px;
-        }
-        .permission-selector-dropdown{
-            min-width: 128px;
-            max-width: 128px;
-            min-height: 96px;
-            max-height: 128px;
-            box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.2);
-            .permission-selector-dropdown-item{
-                min-height: 32px;
-                max-height: 32px;
-                &:hover{
-                    background: $light;
-                }
-                .icon{
-                    min-width: 32px;
-                    max-width: 32px;
-                    min-height: 32px;
-                    max-height: 32px;
-                }
-            }
-        }
-    }
+  }
 }
-.service-list{
-    min-height: 350px;
-    max-height: 350px;
-    overflow-y: auto;
+
+.service-name {
+  min-width: 170px;
+  max-width: 170px;
+}
+.search-exception {
+  min-width: 300px;
+  max-width: 300px;
+}
+.permission-div {
+  min-width: 120px;
+  max-width: 120px;
+  min-height: 64px;
+  max-height: 64px;
+  .permission-card {
+    min-width: 96px;
+    max-width: 96px;
+    min-height: 96px;
+    max-height: 96px;
+    transition: 0.25s;
+    &:hover {
+      background: $light;
+    }
+    .permission-icon-wrapper {
+      min-width: 46px;
+      max-width: 46px;
+      min-height: 46px;
+      max-height: 46px;
+      border: 3px solid $light;
+      .permission-icon {
+        min-width: 40px;
+        max-width: 40px;
+        min-height: 40px;
+        max-height: 40px;
+      }
+    }
+  }
+  .permission-selector {
+    .permission-selected {
+      min-width: 80px;
+      max-width: 80px;
+      min-height: 20px;
+      max-height: 20px;
+      border-radius: 10px;
+    }
+    .permission-selector-dropdown {
+      min-width: 128px;
+      max-width: 128px;
+      min-height: 96px;
+      max-height: 128px;
+      box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.2);
+      .permission-selector-dropdown-item {
+        min-height: 32px;
+        max-height: 32px;
+        &:hover {
+          background: $light;
+        }
+        .icon {
+          min-width: 32px;
+          max-width: 32px;
+          min-height: 32px;
+          max-height: 32px;
+        }
+      }
+    }
+  }
+}
+.service-list {
+  min-height: 350px;
+  max-height: 350px;
+  overflow-y: auto;
 }
