state model changes

--- a/src/app/home/schema-builder/schema-builder.component.scss
+++ b/src/app/home/schema-builder/schema-builder.component.scss
@@ -45,7 +45,7 @@
 
   #experience-side-nav{
     width: 175px;
-    border-right: 1px solid #DBDBDB;
+    // border-right: 1px solid #DBDBDB;
 
     .side-nav-tab{
       cursor: pointer;
