--- a/src/app/home/schema-utils/state-model/state-model.component.scss
+++ b/src/app/home/schema-utils/state-model/state-model.component.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
@@ -14,13 +13,12 @@
         color: #A3A3A3;
         font-size: 24px;
         line-height: 54px;
-        font-family: 'Poppins', sans-serif;
     }
 }
 
 #configureStateModel{
   background: #525252;
-  border-radius: 2px;
+  border-radius: 0px 2px 2px 0px;
   color: #F9F9F9;
   border: none;
   font-size: 12px;
@@ -43,8 +41,10 @@
           min-height: 36px;
           max-height: 36px;
           .border-circle{
-            width: 19px;
-            height: 19px;
+            width: 16px;
+            height: 16px;
+            line-height: 13px;
+            padding-left: 1px;
             text-align: center;
             margin: 5px 5px 5px 0px;
             border: 1px solid black;
@@ -58,10 +58,12 @@
   }
 }
 
-
-
 #select-state-model{
   width: 30%;
+  input{
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+  }
 }
 
 #stateModelInfo{
@@ -80,26 +82,32 @@
   padding: 4px 6px;
 }
 
+.new-state-section{
+  min-height: 300px;
+}
+
 #new-state-input{
   border-right: none !important;
-  border-radius: 0px !important;
-}
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;}
+
 
 #delete-state-model{
   font-size: 12px;
   text-decoration: underline;
   cursor: pointer;
+  color:red;
 }
 
 .state-model-label{
     font-size: 0.770rem;
+    
 }
 
 .mat-standard-chip{
   min-height: 24px !important;
   padding: 3px 6px 3px 9px !important;
 
-  font-family: Poppins;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -131,7 +139,12 @@
   }
 
   .state-name{
-    margin-bottom: 15px;
+    font-family: "Lato", sans-serif !important;
+    max-width: 130px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block !important;
   }
 
   input[type=checkbox]{
@@ -144,7 +157,6 @@
   }
 
   input[type=checkbox]+span{
-    font-family: Poppins;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -166,19 +178,22 @@
 .mat-form-field{
   background-color: transparent !important;
   padding: 0 !important;
-
+  font-family: "Lato", sans-serif !important;
 
   &:hover{
     .mat-form-field-wrapper{
       .mat-form-field-underline{
         .mat-form-field-ripple{
           background-color: #BABABA !important;
+          
         }
       }
     }    
   }
 
   .mat-form-field-wrapper{
+
+    padding-bottom: 1.0rem !important;
     .mat-form-field-underline{
       .mat-form-field-ripple{
         background-color: #BABABA !important;
@@ -193,8 +208,6 @@
   }
 }
 
-
-
-.cursor-pointer{
-  cursor: pointer;
+.fs-16{
+  font-size: 16px
 }
