--- a/src/app/utils/structure-field/structure-field.component.scss
+++ b/src/app/utils/structure-field/structure-field.component.scss
@@ -26,8 +26,8 @@
     overflow: hidden;
   }
   .error-icon {
-      top: 7px;
-      left: 90%;
+    top: 7px;
+    left: 90%;
   }
   .searching-relation {
     right: 4px;
@@ -82,9 +82,9 @@
   background-color: #ececec;
 }
 
-.state-model{
-    background: #C4C4C4;
-    border-radius: 4px;
-    padding: 2px 5px;
-    margin-left: 12px;
+.state-model {
+  background: #c4c4c4;
+  border-radius: 4px;
+  padding: 2px 5px;
+  margin-left: 12px;
 }
