--- a/src/app/home/schema-utils/state-model/state-model.component.scss
+++ b/src/app/home/schema-utils/state-model/state-model.component.scss
@@ -1,110 +1,108 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
-.meme{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -20%);
-    img{
-        width: 40%;
-    }
+.meme {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  img {
+    width: 40%;
+  }
 
-    h4{
-        color: #A3A3A3;
-        font-size: 24px;
-        line-height: 54px;
-    }
+  h4 {
+    color: #a3a3a3;
+    font-size: 24px;
+    line-height: 54px;
+  }
 }
 
-#configureStateModel{
+#configureStateModel {
   background: #525252;
   border-radius: 0px 2px 2px 0px;
-  color: #F9F9F9;
+  color: #f9f9f9;
   border: none;
   font-size: 12px;
   outline: none;
 }
 
-.create-state-model{
-    .selector-dropdown {
-      min-width: 30%;
-      max-width: 30%;
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24);
-      top: 30px;
-      left: 0px;
-      margin-bottom: 30px;
-      z-index: 10;
-      .selector-list {
-        max-height: 144px;
-        overflow-y: auto;
-        .selector-list-item {
-          min-height: 36px;
-          max-height: 36px;
-          .border-circle{
-            width: 16px;
-            height: 16px;
-            line-height: 13px;
-            padding-left: 1px;
-            text-align: center;
-            margin: 5px 5px 5px 0px;
-            border: 1px solid black;
-            border-radius: 100%;
-          }
-          &:hover {
-            background: $light;
-          }
+.create-state-model {
+  .selector-dropdown {
+    min-width: 30%;
+    max-width: 30%;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24);
+    top: 30px;
+    left: 0px;
+    margin-bottom: 30px;
+    z-index: 10;
+    .selector-list {
+      max-height: 144px;
+      overflow-y: auto;
+      .selector-list-item {
+        min-height: 36px;
+        max-height: 36px;
+        .border-circle {
+          width: 16px;
+          height: 16px;
+          line-height: 13px;
+          padding-left: 1px;
+          text-align: center;
+          margin: 5px 5px 5px 0px;
+          border: 1px solid black;
+          border-radius: 100%;
+        }
+        &:hover {
+          background: $light;
         }
       }
+    }
   }
 }
 
-#select-state-model{
+#select-state-model {
   width: 30%;
-  input{
+  input {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
   }
 }
 
-#stateModelInfo{
+#stateModelInfo {
   margin-top: 8px;
-  span{
-    background: #DEDEDE;
+  span {
+    background: #dedede;
     border-radius: 2px;
     padding: 1.1px 3.1px;
     font-size: 10px;
   }
-
 }
 
-#add-state{
+#add-state {
   border: 1px solid #ccc;
   padding: 4px 6px;
 }
 
-.new-state-section{
+.new-state-section {
   min-height: 300px;
 }
 
-#new-state-input{
+#new-state-input {
   border-right: none !important;
   border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;}
+  border-bottom-right-radius: 0 !important;
+}
 
-
-#delete-state-model{
+#delete-state-model {
   font-size: 12px;
   text-decoration: underline;
   cursor: pointer;
-  color:red;
+  color: red;
 }
 
-.state-model-label{
-    font-size: 0.770rem;
-    
+.state-model-label {
+  font-size: 0.77rem;
 }
 
-.mat-standard-chip{
+.mat-standard-chip {
   min-height: 24px !important;
   padding: 3px 6px 3px 9px !important;
 
@@ -115,11 +113,11 @@
   /* identical to box height */
 
   letter-spacing: 0.01em;
-  background: #E1E1E1 !important;
-  color: #4E4E4E !important;
+  background: #e1e1e1 !important;
+  color: #4e4e4e !important;
   opacity: 1 !important;
 
-  .mat-chip-remove{
+  .mat-chip-remove {
     background: #555555 !important;
     border-radius: 50%;
     height: 13px;
@@ -129,16 +127,14 @@
     color: #fff !important;
     text-align: center;
   }
-
 }
 
-.state-model-config{
-
-  hr{
-    border: 1px solid #BABABA;
+.state-model-config {
+  hr {
+    border: 1px solid #bababa;
   }
 
-  .state-name{
+  .state-name {
     font-family: "Lato", sans-serif !important;
     max-width: 130px;
     white-space: nowrap;
@@ -147,67 +143,64 @@
     display: inline-block !important;
   }
 
-  input[type=checkbox]{
+  input[type="checkbox"] {
     width: 14px;
     height: 14px;
     border-radius: 2px;
-    border: 1px solid #2D2D2D;
+    border: 1px solid #2d2d2d;
     margin-right: 7px;
     margin-bottom: 15px;
   }
 
-  input[type=checkbox]+span{
+  input[type="checkbox"] + span {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 21px;
   }
 
-  input[type=checkbox]~span.fa{
-    color: #8C8C8C;
+  input[type="checkbox"] ~ span.fa {
+    color: #8c8c8c;
     font-size: 15px;
   }
-
 }
 
-.mat-form-field-flex{
+.mat-form-field-flex {
   background-color: transparent !important;
   padding: 0px !important;
 }
 
-.mat-form-field{
+.mat-form-field {
   background-color: transparent !important;
   padding: 0 !important;
   font-family: "Lato", sans-serif !important;
 
-  &:hover{
-    .mat-form-field-wrapper{
-      .mat-form-field-underline{
-        .mat-form-field-ripple{
-          background-color: #BABABA !important;
-          
+  &:hover {
+    .mat-form-field-wrapper {
+      .mat-form-field-underline {
+        .mat-form-field-ripple {
+          background-color: #bababa !important;
         }
       }
-    }    
+    }
   }
 
-  .mat-form-field-wrapper{
-
-    padding-bottom: 1.0rem !important;
-    .mat-form-field-underline{
-      .mat-form-field-ripple{
-        background-color: #BABABA !important;
+  .mat-form-field-wrapper {
+    padding-bottom: 1rem !important;
+    .mat-form-field-underline {
+      .mat-form-field-ripple {
+        background-color: #bababa !important;
       }
     }
-  }  
+  }
 
-  &.mat-form-field-disabled{
+  &.mat-form-field-disabled {
     .mat-form-field-wrapper {
       padding-bottom: 0 !important;
     }
   }
 }
 
-.fs-16{
-  font-size: 16px
+.fs-16 {
+  font-size: 16px;
 }
