--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -85,8 +85,10 @@
     <div class="label-width text-secondary">Values</div>
     <div class="value-width position-relative">
       <ng-container *ngIf="edit.status">
-        <input class="form-control pr-4" [ngClass]="{'invalid-enum' : form.get('properties.enum').hasError('emptyEnum') }" (paste)="pasteOnList($event,'enum','string')"
-          (keyup.enter)="listEnterKey($event,'enum')" type="text" formControlName="_listInput">
+        <input class="form-control pr-4"
+          [ngClass]="{'invalid-enum' : form.get('properties.enum').hasError('emptyEnum') }"
+          (paste)="pasteOnList($event,'enum','string')" (keyup.enter)="listEnterKey($event,'enum')" type="text"
+          formControlName="_listInput">
         <button type="button" class="list-add-button btn btn-link hover position-absolute p-0"
           [disabled]="form.get('properties._listInput').value===''" (click)="addToList('enum')">
           <span class="fa fa-plus text-primary"></span>
