--- a/src/app/utils/structure-field-properties/number-property/number-property.component.html
+++ b/src/app/utils/structure-field-properties/number-property/number-property.component.html
@@ -12,7 +12,7 @@
           <!-- <p>{{test(form.get('properties.default').value)}}</p> -->
           <div class="value-width" *ngIf=" form.get('properties._detailedType').value === 'enum'">
             <select class="form-control" formControlName="default" id="_currency"
-              (change)="setEnumValue(form.get('properties'))">
+              (change)="setEnumValue(form.get('properties'))" [attr.disabled]="checkStateModel() ? '' : null">
               <option [value]=null selected>Select Value</option>
               <option id="_relationAttr" *ngFor="let attr of form.get('properties.enum').value" [value]="attr">{{attr}}
               </option>
