state model meme image fixed

--- a/src/app/home/schema-utils/state-model/state-model.component.html
+++ b/src/app/home/schema-utils/state-model/state-model.component.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class='meme position-absolute text-center'>
-            <img src="/assets/img/state_model_meme.png" alt="Meme">
+            <img src="./assets/img/state_model_meme.png" alt="Meme">
             <h4>
                 Hmm...That box must be important...
             </h4>
